# Blog-api-v2

./: README.md  pyproject.toml
.github/workflows/: main.yml
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
posts/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
