[project]
name = "blog-api-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
]

[tool.mypy]
# Ignores the "Skipping analyzing" errors
ignore_missing_imports = true

# Stops the "Need type annotation" errors in models
check_untyped_defs = false
disallow_untyped_defs = false
