[project]
name = "blog-api-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "requests>=2.34.2",
]

[tool.mypy]
# Ignores the "Skipping analyzing" errors
ignore_missing_imports = true

# Stops the "Need type annotation" errors in models
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff.format]
# Quotation style
quote-style = "double"
